# SBMG-backend-v2

./: .gitignore  AJMER.xlsx  ALWAR.xlsx  BALOTRA.xlsx  BANSWARA.xlsx  BARAN.xlsx  BARMER.xlsx  BEAWAR.xlsx  BHARATPUR.xlsx  BHILWARA.xlsx  BIKANER.xlsx  BUNDI.xlsx  Blocks.csv  CHITTORGARH.xlsx  CHURU.xlsx  CONSOLIDATED_REPORTING_API.md  DAUSA.xlsx  DEEG.xlsx  DHOLPUR.xlsx  DIDWANA-KUCHAMAN.xlsx  DUNGARPUR.xlsx  Districts.csv  FCM_QUICKSTART.md  GANGANAGAR.xlsx  HANUMANGARH.xlsx  INTEGRATION_SUMMARY.md  JAIPUR.xlsx  JAISALMER.xlsx  JALORE.xlsx  JHALAWAR.xlsx  JHUNJHUNU.xlsx  JODHPUR.xlsx  KARAULI.xlsx  KHAIRTHAL-TIJARA.xlsx  KOTA.xlsx  KOTPUTLI-BEHROR.xlsx  NAGAUR.xlsx  PALI.xlsx  PHALODI.xlsx  PRATAPGARH.xlsx  (+15 more)
backend/: .env.example  .env.fcm.example  ANNUAL_SURVEY_ANALYTICS_README.md  API_IMPLEMENTATION_GAPS_FIXED.md  Blocks.csv  Dockerfile  FORMULAE_API_README.md  README.md  SEGREGATED_USER_MANAGEMENT.md  accounts.creation.py  alembic.ini  auth_utils.py  block_passwords.csv  block_usernames.2.csv  config.py  contractor_passwords.csv  contractor_usernames.2.csv  create_accounts.py  create_annual_gp_master_data.py  create_bulk_agencies.py  create_bulk_attendances.py  create_bulk_contractors.py  create_bulk_inspection.py  create_bulk_notices.py  create_bulk_position_holders.py  create_bulk_random_complaints.py  create_position_holder_entries.py  delete_gp_master_data.sql  district_passwords.csv  entrypoint.sh  firebase.json  fix_alembic_version.py  generate_rsa_keys.py  geo.generation.py  main.py  pyproject.toml  requirements.txt  setup_fcm.sh  test_consolidated_reporting.py  test_encrypted_login.mjs  (+6 more)
backend/alembic/: env.py
backend/controllers/: admin.py  annual_survey.py  attendance.py  auth.py  citizen.py  complaints.py  consolidated_reporting.py  contractor.py  contractor_analytics.py  event.py  fcm_device.py  feedback.py  formulae.py  geography.py  gps_tracking.py  inspection.py  login_management.py  notice.py  person_management.py  position_holder.py  public.py  reporting.py  reporting_legacy.py  scheme.py  survey.py  user_management.py
backend/database/: __init__.py
backend/exceptions/: attendance.py  database.py  position_holders.py
backend/middleware/: security.py
backend/models/: __init__.py  base.py  internal.py
backend/services/: annual_survey.py  annual_survey_analytics.py  annual_survey_analytics_optimized.py  attendance.py  auth.py  complaints.py  contractor.py  contractor_analytics.py  encryption.py  event.py  fcm_notification_service.py  fcm_service.py  feedback.py  geography.py  (+12 more)
(+174 files in other folders)
