[project]
name = "backend"
version = "0.1.0"
description = "SBM Gramin Rajasthan Backend API"
authors = [
    {name = "Avanish Gupta", email = "avanish.sde@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.104.1,<0.117.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0,<0.25.0"}
sqlalchemy = ">=2.0.23,<3.0.0"
psycopg2-binary = ">=2.9.9,<3.0.0"
asyncpg = ">=0.29.0,<0.31.0"
alembic = ">=1.12.1,<2.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0,<4.0.0"}
argon2-cffi = ">=21.0.0,<24.0.0"
python-multipart = ">=0.0.6,<1.0.0"
boto3 = ">=1.34.0,<2.0.0"
pydantic = ">=2.5.0,<3.0.0"
pydantic-settings = ">=2.1.0,<3.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
pillow = ">=10.1.0,<11.0.0"
aiosqlite = ">=0.21.0,<0.22.0"
greenlet = ">=3.2.4,<4.0.0"
types-botocore = ">=1.0.2,<2.0.0"
types-boto3 = ">=1.40.40,<2.0.0"
firebase-admin = ">=7.1.0,<8.0.0"
aiocache = ">=0.12.3,<0.13.0"
requests = ">=2.32.5,<3.0.0"
httpx = ">=0.27.0,<0.29.0"
pycryptodome = ">=3.20.0,<4.0.0"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
types-firebase-admin = "^0.1.1"
pandas = "^2.3.3"
types-boto3 = "^1.40.61"
faker = "^37.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
